Bug 930437 - Remove unnecessary compilation aborts from Lowering::visitToInt32. r=bhackett